--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     },
     "devDependencies": {
         "@pmmmwh/react-refresh-webpack-plugin": "^0.5.8",
+        "@reduxjs/toolkit": "^2.6.0",
         "@svgr/webpack": "^8.1.0",
         "@types/node": "^20.11.5",
         "@types/react": "^18.0.21",
         "@types/react-dom": "^18.0.6",
+        "@types/react-redux": "^7.1.34",
         "@types/styled-components": "^5.1.34",
         "@types/webpack": "^5.28.5",
         "@types/webpack-dev-server": "^4.7.2",
@@ -37,7 +39,9 @@
         "eslint-plugin-react-hooks": "^4.6.2",
         "html-webpack-plugin": "^5.5.0",
         "mini-css-extract-plugin": "^2.6.1",
+        "react-redux": "^9.2.0",
         "react-refresh-typescript": "^2.0.7",
+        "redux": "^5.0.1",
         "sass": "^1.55.0",
         "sass-loader": "^14.0.0",
         "style-loader": "^3.3.1",
