--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@types/webpack-dev-server": "^4.7.2",
         "@typescript-eslint/eslint-plugin": "^8.26.0",
         "@typescript-eslint/parser": "^8.26.0",
+        "axios": "^1.8.1",
         "babel-plugin-styled-components": "^2.1.4",
         "clean-webpack-plugin": "^4.0.0",
         "copy-webpack-plugin": "^12.0.2",
