--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
     "name": "test-project-7winds",
     "version": "1.0.0",
     "author": "Kralichkin Dmitry",
+    "homepage": "https://dmKrl.github.io/test-project-7winds",
     "main": "index.js",
     "scripts": {
         "start": "webpack serve --env port=3000",
         "build:dev": "webpack --env mode=development",
         "build:prod": "webpack --env mode=production",
         "lint:ts": " eslint \"**/*.{ts,tsx}\"",
-        "lint:ts:fix": " eslint \"**/*.{ts,tsx}\" --fix"
+        "lint:ts:fix": " eslint \"**/*.{ts,tsx}\" --fix",
+        "deploy": "npm run build:prod && gh-pages -d build"
     },
     "dependencies": {
         "react": "^18.2.0",
@@ -38,6 +40,7 @@
         "eslint-plugin-import": "^2.31.0",
         "eslint-plugin-react": "^7.37.4",
         "eslint-plugin-react-hooks": "^4.6.2",
+        "gh-pages": "^6.3.0",
         "html-webpack-plugin": "^5.5.0",
         "mini-css-extract-plugin": "^2.6.1",
         "react-redux": "^9.2.0",
